adding fingerprintbiometric and password ,splash screen , update issues

--- a/app/src/main/res/layout/row_items.xml
+++ b/app/src/main/res/layout/row_items.xml
@@ -18,6 +18,8 @@
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
             android:text="@string/word_name"
+            android:textSize="20dp"
+            android:fontFamily="sans-serif-medium"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintEnd_toStartOf="@id/rep_numbers"
@@ -29,7 +31,10 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@string/count"
+            android:fontFamily="sans-serif"
+            android:paddingLeft="110dp"
             app:layout_constraintBottom_toBottomOf="parent"
+            android:textSize="20dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/searched_words"
 
